src/css/aparato.css
.menu-screen{
    width: 100%;
    height: 100%;
    background-color: white;
    scale: 0.90;

    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    gap: 0.3rem;
    
    /* opacity: 0; */
    /* animation: menu-screen-appear 0.5s ease-in-out 0s forwards; */
}

.menu-screen-info{
    width: 100%;
    /* height: 100%; */
    height: fit-content;
    background-color: white;
    scale: 0.90;

    display: flex;
    flex-direction: column;
    /* justify-content: start; */
    /* align-items: center; */
    /* gap: 1rem; */

    text-align: start;
}

.menu-screen-info *{
    margin: 0;
    padding: 0.5rem;
}

.menu-screen-info li{
    padding: 0.3rem;
    transform: translate(0.7rem, 0);
    margin-bottom: 0.3rem;
}

.menu-screen-info h4{
    margin-top: 0.8rem;
}

@keyframes menu-screen-appear {
    100%{
        opacity: 1;
    }   
}

@keyframes menu-screen-disappear {
    0%{
        opacity: 1;
    }   
    100%{
        /* transform: rotate(360deg); */
        opacity: 0.5;
        /* scale: 0.1; */
        transform: translate(0, 120%);
    }   
}

.menu-header{
    /* background-color: red; */
    width: 90%;
    padding: 0.3rem;
    /* height: 2rem; */
    border-bottom: 3px solid black;
}

.menu-options{
    /* background-color: red; */
    padding: 0.4rem;
    width: 90%;
    /* text-align: start; */

    display: flex;
    justify-content: space-between;
    align-items: center;
}

.focused-option{
    /* background-color: gray; */
    background: linear-gradient(rgb(131, 131, 236) 0%, rgb(131, 131, 236) 30%, black 100%);
    color: white;
    border-radius: 3px;
}

.menu-cover-img{
    width: 2rem;
    height: 2rem;
}

